--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
-
+<div class="background"></div>
 <div class="header">
     <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
         <a class="pure-menu-heading" href="">walt.id IDP Kit</a>
@@ -22,16 +23,15 @@
     </div>
 </div>
 
-<div class="splash-container">
-    <div class="splash">
-        <h1 class="splash-head">walt.id IDP Kit</h1>
-        <p class="splash-subhead">
-            Welcome to the walt.id IDP Kit
-        </p>
-        <p>
-            <a href="https://docs.walt.id/v/idp-kit" class="pure-button pure-button-primary">Get Started</a>
-        </p>
-    </div>
+<div class="splash">
+    <img src="favicon.png"/>
+    <h1 class="splash-head">walt.id IDP Kit</h1>
+    <p class="splash-subhead">
+        Welcome to the walt.id IDP Kit
+    </p>
+    <p>
+        <a href="https://docs.walt.id/v/idp-kit" class="pure-button pure-button-primary">Get Started</a>
+    </p>
 </div>
 
 </body>
